create github pages

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <title>Home</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,200,300,500,600,700,800,900">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700">
   <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,200,300,500,600,700,800,900">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/socicon/css/socicon.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/clarus/css/style.css">
   <link rel="stylesheet" href="assets/mobirise-slider/style.css">
   <link rel="stylesheet" href="assets/mobirise-gallery/style.css">
@@ -23,22 +23,22 @@
   
   
   
-<!-- CarrotQuest BEGIN -->
-<script type="text/javascript">
-    (function(){
-      function Build(name, args){return function(){window.carrotquestasync.push(name, arguments);} }
-      if (typeof carrotquest === 'undefined') {
-        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
-        s.src = '//cdn.carrotquest.io/api.min.js';
-        var x = document.getElementsByTagName('head')[0]; x.appendChild(s);
-        window.carrotquest = {}; window.carrotquestasync = []; carrotquest.settings = {};
-        var m = ['connect', 'track', 'identify', 'auth', 'open', 'onReady', 'addCallback', 'removeCallback', 'trackMessageInteraction'];
-        for (var i = 0; i < m.length; i++) carrotquest[m[i]] = Build(m[i]);
-      }
-    })();
-  carrotquest.connect('14405-3549b873b58e06fbd45fc080bf');
+<!-- Begin Verbox {literal} -->
+<script type='text/javascript'>
+	(function(d, w, m) {
+		window.supportAPIMethod = m;
+		var s = d.createElement('script');
+		s.type ='text/javascript'; s.id = 'supportScript'; s.charset = 'utf-8';
+		s.async = true;
+		var id = '86f55bdee0b968ae74d59890ad4cccc7';
+		s.src = 'https://admin.verbox.ru/support/support.js?h='+id;
+		var sc = d.getElementsByTagName('script')[0];
+		w[m] = w[m] || function() { (w[m].q = w[m].q || []).push(arguments); };
+		if (sc) sc.parentNode.insertBefore(s, sc); 
+		else d.documentElement.firstChild.appendChild(s);
+	})(document, window, 'Verbox');
 </script>
-<!-- CarrotQuest END --></head>
+<!-- {/literal} End Verbox --></head>
 <body>
 <section class="menu3" id="menu3-g" data-rv-view="24">
 
@@ -70,7 +70,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobiriz.store/">создать лендинг бесплатно</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide header2 mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="5000" id="header2-c" data-rv-view="0">
+<section class="engine"><a href="https://mobiriz.store/">сайт программа для создания сайтов бесплатно</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide header2 mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-interval="5000" id="header2-c" data-rv-view="0">
     <div>
         <div>
             <div>
@@ -490,17 +490,14 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-core.js"></script>
-  <script src="assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/bootstrap-carousel-swipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/clarus/js/script.js"></script>
   <script src="assets/mobirise-gallery/script.js"></script>
   
   
   <input name="animation" type="hidden">
-  <input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
   </body>
 </html>
